external-crates/move/move-compiler/tests/move_2024/parser/use_fun_multi.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/use_fun_multi.move:2:20
  │
2 │     use fun foo as (u64, bool).foo;
  │                    ^
  │                    │
  │                    Unexpected '('
  │                    Expected a type name

